# api.modzilla

./: .dockerignore  .env.example  .gitignore  Pipfile  README.md  __main__.py  app.py  artisan.py  builder.py  cli.py  conjure  pyproject.toml  requeriments.txt  run.py  tasks.py
addons/: builder.py  validate.py
app/: __init__.py  contants.py  extensions.py  jobs.py
app/blueprints/: __init__.py  chats_route.py  player_route.py  rooms_route.py
app/blueprints/v1/: __init__.py  chats_blueprint.py  rooms_blueprint.py  social_auth_blueprint.py  users_blueprint.py
app/enums/: Status.py
app/events/: __init__.py
app/events/namespaces/: channel.py
app/middlewares/: auth_middleware.py
config/: database.py
database/migrations/: migr_1739411674942.py  migr_1739411674942.sql  migr_1739411674943.sql  migr_1739411674944.sql  migr_1739411696795.py  migr_1739411696795.sql  migr_1739411696796.py  migr_1739411696796.sql  migr_1743284094292.py  migr_1754091845131.py  migr_1754091845131.sql  migr_1758241137108.sql
database/seeders/: seed_1742778889110.sql  seed_1742778889111.py  seed_1742778889111.sql  seed_1742778889112.py  seed_1742778889112.sql
docs/: swagger.json
orm/: database.py
